import java.net.http.HttpClient
import java.net.http.HttpRequest
import java.net.http.HttpResponse

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.5'
	id "org.sonarqube" version "4.4.1.3373"
	id 'org.cyclonedx.bom' version '1.10.0'
}

group = 'portal.expenses'
version = '0.0.1-SNAPSHOT'
description = 'Expenses Portal'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation("software.amazon.awssdk:s3:2.41.27")
	implementation 'org.flywaydb:flyway-core'


	// Log4Shell (CVE-2021-44228) - One of the most famous critical vulnerabilities
/*
	implementation 'org.apache.logging.log4j:log4j-core:2.14.1'

	// Critical Remote Code Execution (CVE-2022-22965 / "Spring4Shell")
	// Note: Using an older Spring core can trigger this
	implementation 'org.springframework:spring-beans:5.3.17'

	// FasterXML Jackson Databind vulnerability (CVE-2019-14540)
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.9'

	// Commons Collections (CVE-2015-4852) - Famous Deserialization vulnerability
	implementation 'commons-collections:commons-collections:3.2.1'
*/

	runtimeOnly 'org.postgresql:postgresql'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:testcontainers:1.19.3'
	testImplementation 'org.testcontainers:postgresql:1.19.3'
	testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
	testImplementation 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

sonar {
	properties {

		def branch = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()

		// This makes "my-project" and "my-project:feature-x" separate dashboard entries
		property "sonar.projectKey", "expenses-portal:${branch}"
		property "sonar.projectName", "Expenses Portal (${branch})"

		property "sonar.host.url", "http://localhost:9001"
		//property "sonar.projectKey", "expenses-portal"
		//property "sonar.projectName", "Expenses Portal"
		property "sonar.token", "squ_c15ef79b8174e38a47c3f1f9f70fedcbeba8649f"
	}
}

tasks.register('uploadSbom') {
	dependsOn 'cyclonedxBom'
	group = 'verification'

	doLast {
		def bomFile = file('build/reports/bom.json')
		def apiKey = "odt_k2wPK403_rWviy7eeH6FeKbkspk1iuVYlVfHjlZcb"       // Double-check this in D-Track
		def projectId = "93b8b476-42a8-45e3-9a65-d3c48d8dc508"    // Double-check this in D-Track
		// Use port 8081 for the API as per your setup
		def apiUrl = "http://localhost:8081/api/v1/bom"

		if (!bomFile.exists()) {
			throw new GradleException("SBOM file not found at ${bomFile.absolutePath}")
		}

		def bomBase64 = bomFile.bytes.encodeBase64().toString()

		// Construct the JSON payload
		def jsonBody = """{
            "project": "${projectId}",
            "bom": "${bomBase64}"
        }"""

		def client = HttpClient.newHttpClient()
		def request = HttpRequest.newBuilder()
				.uri(URI.create(apiUrl))
				.header("Content-Type", "application/json")
				.header("X-Api-Key", apiKey)
				.PUT(HttpRequest.BodyPublishers.ofString(jsonBody, java.nio.charset.StandardCharsets.UTF_8))
				.build()

		def response = client.send(request, HttpResponse.BodyHandlers.ofString())

		if (response.statusCode() in [200, 201]) {
			println "✅ SBOM successfully uploaded to Dependency-Track!"
		} else {
			println "❌ Response status: ${response.statusCode()}"
			println "❌ Response body: ${response.body()}"
			throw new GradleException("❌ Upload failed. See logs above.")
		}
	}
}
